# gnome-extension-caffeinate

./: .eslintrc.yml  README.md  ego-pack.sh  meson.build  meson_options.txt  package-lock.json  package.json
.lint/: eslintrc-extension.yml  eslintrc-gjs.yml  eslintrc-shell.yml
po/: caffeinate@gnome-extensions.johnstray.com.pot  meson.build
src/: extension.js  meson.build  metadata.json  metadata.json.in  prefs.js  stylesheet.css
src/modules/: CaffeinateClient.js  GameModeClient.js  QuickSettingsMenu.js
src/preferences/: AboutPrefs.js  CaffeinatePrefs.js  GameModePrefs.js
src/schemas/: meson.build  org.gnome.shell.extensions.caffeinate.gschema.xml  org.gnome.shell.extensions.project-awesome.gschema.xml
